--- a/client/dockerfile
+++ b/client/dockerfile
@@ -1,14 +1,24 @@
-# build stage
-FROM node:lts-alpine as build-stage
+# Use an official Node.js runtime as a parent image
+FROM node:latest
+
+# Set the working directory in the container
 WORKDIR /time-manager
-COPY package*.json ./
+
+# Copy package.json and package-lock.json to the working directory
+COPY package.json ./
+COPY package-lock.json ./
+
+
+# Install project dependencies
 RUN npm install
-COPY . .
-RUN npm run build
 
+# Copy the entire project directory into the container
+COPY . ./
 
-# production stage
-FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /time-manager/dist /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Build the Vue.js application for production
+# RUN npm run build
+
+RUN chmod +x base_start.sh
+
+# Define the command to start the application
+CMD ["sh","base_start.sh"]
