--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,18 +16,20 @@ services:
   elixir_server:
     build:
       context: ./gotham
+    # image: ianq/back:latest
     ports:
       - 4000:4000
     depends_on:
       - postgres
+    restart: always
 
   web_client:
     build: ./client
-    container_name: web_client
+    # image: ianq/front:latest
     ports:
-      - 8080:8080
-    depends_on:
-      - elixir_server
+      - 80:80
+    restart: always
+
 
 volumes:
   postgres_data:  # Définition du volume PostgreSQL_data
